--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Solar Panel Prediction App</h1>
+	<h1>IntelliSun</h1>
+	<h3>Solar Panel Prediction App</h3>
 	<form>
 		<label for="temperature">Temperature (in °C):</label>
 		<input type="number" id="temperature" name="temperature" required value="90">
@@ -16,17 +17,13 @@
 		<label for="humidity">Humidity (in %):</label>
 		<input type="number" id="humidity" name="humidity" required value="60">
 
-		<label for="panel_orientation">Panel Orientation (in degrees):</label>
-		<input type="number" id="panel_orientation" name="panel_orientation" required value="180">
-
-		<label for="panel_position">Panel Position (in degrees):</label>
-		<input type="number" id="panel_position" name="panel_position" required value="30">
-
 		<input type="button" value="Predict" onclick="predictCurrent()">
 	</form>
+	
+	<div id="current"></div>
+	<div id="Orientation"></div>
+	<div id="Position"></div>
 
-    <!-- <p>predictCurrent:</p> -->
-	<div id="result"></div>
 
 	<script src="script.js"></script>
 </body>
