--- a/index.html
+++ b/index.html
@@ -3,27 +3,64 @@
 <head>
 	<title>IntelliSun - Solar Panel Prediction App</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<style>
+		.container {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			height: 100vh;
+		}
+
+		form {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin-bottom: 1rem;
+		}
+
+		.result {
+			text-align: center;
+			margin-top: 1rem;
+		}
+	</style>
 </head>
 <body>
-	<h1>IntelliSun</h1>
-	<h3>Solar Panel Prediction App</h3>
-	<form>
-		<label for="temperature">Temperature (in °C):</label>
-		<input type="number" id="temperature" name="temperature" required value="90">
+	<div class="container">
+		<h1>IntelliSun</h1>
+		<h3>Solar Panel Prediction App</h3>
 
-		<label for="sunlight_intensity">Sunlight Intensity (in W/m^2):</label>
-		<input type="number" id="sunlight_intensity" name="sunlight_intensity" required value="700">
+		<section>
+			<form>
+				<label for="temperature">Temperature (in °C):</label>
+				<input type="number" id="temperature" name="temperature" required value="90">
 
-		<label for="humidity">Humidity (in %):</label>
-		<input type="number" id="humidity" name="humidity" required value="60">
+				<label for="sunlight_intensity">Sunlight Intensity (in W/m^2):</label>
+				<input type="number" id="sunlight_intensity" name="sunlight_intensity" required value="700">
 
-		<input type="button" value="Predict" onclick="predictCurrent()">
-	</form>
-	
-	<div id="current"></div>
-	<div id="Orientation"></div>
-	<div id="Position"></div>
+				<label for="humidity">Humidity (in %):</label>
+				<input type="number" id="humidity" name="humidity" required value="60">
 
+				<input type="button" value="Predict" onclick="predictCurrent()">
+			</form>
+		</section>
+		
+
+		<section class="result">
+			<table>
+				<tr>
+					<th>Current</th>
+					<th>Orientation</th>
+					<th>Position</th>
+				</tr>
+				<tr>
+					<td id="current"></td>
+					<td id="Orientation"></td>
+					<td id="Position"></td>
+				</tr>
+			</table>
+		</section>
+	</div>
 
 	<script src="script.js"></script>
 </body>
